add nginx role and multi site in webservers

--- a/ansible/playbooks/roles/webserver/templates/index.html
+++ b/ansible/playbooks/roles/webserver/templates/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>{{domain}} Ansible Training</h1>
+        <h1>{{item}} Ansible Training</h1>
     </body>
-</html> 
+</html>
